# ai-powered-crawler

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-24-depth-traversal-design.md
src/: config.py
src/ai/: analyzer.py  healer.py  xpath_gen.py
src/app/: cli.py  factory.py  orchestrator.py
src/crawler/: discovery.py  extractor.py  fetcher.py  url_utils.py
src/domain/: __init__.py  interfaces.py  models.py  pagination_models.py
src/models/: schemas.py
src/pipelines/: __init__.py  base_pipeline.py  detail_pipeline.py  list_pipeline.py
src/preprocessing/: annotator.py  classifier.py  cleaner.py
src/services/: extraction_service.py  link_xpath_service.py  page_analysis_service.py  pagination_engine.py  pagination_service.py  pagination_strategies.py  pattern_learning_service.py  progress_detector.py
src/storage/: exporter.py
tests/: test_analyzer_v2.py  test_app_module_entrypoint.py  test_ci_release_layout.py  test_cli_release_defaults.py  test_detail_pipeline.py  test_exporter.py  test_link_xpath_service.py  test_list_pipeline.py  test_orchestrator_routing.py  test_pagination_engine.py  test_pattern_learning_service.py  test_project_metadata.py  test_public_release_config.py  test_repo_layout.py  test_src_layout_imports.py  test_xpath_gen_ai_validation.py
